[package]
name = "bevy_wh_net"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.1", default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
bevy_renet = "0.0.10"
bincode = "1.3.3"
typetag = "0.2.13"
lazy_static = "1.4.0"
sha256 = "1.4.0"
thiserror = "1.0.50"
